use the plugin rewrite by running  mvn rewrite:run to get the code ready for java21