@@ -267,7 +267,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		hl7service.processHL7InQueue(queueItem);
 		
 		List<HL7InError> errors = hl7service.getAllHL7InErrors();
-		HL7InError error = errors.get(errors.size() - 1); // get the last error, the one made by this test presumably
+		HL7InError error = errors.getLast(); // get the last error, the one made by this test presumably
 		assertTrue(error.getErrorDetails().contains("In alternate oru r01 parser"));
 		
 		ModuleUtil.shutdown();
@@ -293,7 +293,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
 		assertEquals(1, nk1List.size(), "too many NK1s parsed out");
-		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers());
+		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers());
 		assertNotNull(result, "should have found a person");
 		assertEquals(2, result.getId().intValue(), "found the wrong person");
 	}
@@ -318,7 +318,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
 		assertEquals(1, nk1List.size(), "too many NK1s parsed out");
-		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers());
+		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers());
 		assertNotNull(result, "should have found a person");
 		assertEquals(2, result.getId().intValue(), "found the wrong person");
 	}
@@ -343,7 +343,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
 		assertEquals(1, nk1List.size(), "too many NK1s parsed out");
-		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers());
+		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers());
 		assertNotNull(result, "should have found a person");
 		assertEquals(2, result.getId().intValue(), "found the wrong person");
 	}
@@ -368,7 +368,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
 		assertEquals( 1, nk1List.size(), "too many NK1s parsed out");
-		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers());
+		Person result = hl7service.resolvePersonFromIdentifiers(nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers());
 		assertNull(result, "should not have found a person");
 	}
 	
@@ -391,7 +391,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.get(0)));
+		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.getFirst()));
 	}
 	
 	/**
@@ -412,7 +412,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.get(0)));
+		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.getFirst()));
 	}
 	
 	/**
@@ -433,7 +433,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.get(0)));
+		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.getFirst()));
 	}
 	
 	/**
@@ -454,7 +454,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.get(0)));
+		assertThrows(HL7Exception.class, () -> hl7service.createPersonFromNK1(nk1List.getFirst()));
 	}
 	
 	/**
@@ -475,7 +475,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		Person result = hl7service.createPersonFromNK1(nk1List.get(0));
+		Person result = hl7service.createPersonFromNK1(nk1List.getFirst());
 		assertNotNull(result, "should have returned a person");
 		assertNotNull(Context.getPersonService().getPersonByUuid(result.getUuid()), "the person should exist");
 	}
@@ -499,7 +499,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		Person result = hl7service.createPersonFromNK1(nk1List.get(0));
+		Person result = hl7service.createPersonFromNK1(nk1List.getFirst());
 		assertNotNull(result, "should have returned something");
 		assertTrue(result instanceof Patient, "should have returned a Patient");
 	}
@@ -523,7 +523,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		CX[] identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		CX[] identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		String result = hl7service.getUuidFromIdentifiers(identifiers);
 		assertEquals("2178037d-f86b-4f12-8d8b-be3ebc220022", result);
 		result = null;
@@ -540,7 +540,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		oru = (ORU_R01) message;
 		nk1List = new ORUR01Handler().getNK1List(oru);
-		identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		result = hl7service.getUuidFromIdentifiers(identifiers);
 		assertEquals("2178037d-f86b-4f12-8d8b-be3ebc220022", result);
 		result = null;
@@ -557,7 +557,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		oru = (ORU_R01) message;
 		nk1List = new ORUR01Handler().getNK1List(oru);
-		identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		result = hl7service.getUuidFromIdentifiers(identifiers);
 		assertEquals("2178037d-f86b-4f12-8d8b-be3ebc220022", result);
 	}
@@ -580,7 +580,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		CX[] identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		CX[] identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		String result = hl7service.getUuidFromIdentifiers(identifiers);
 		assertNull(result, "should have returned null");
 	}
@@ -603,7 +603,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		CX[] identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		CX[] identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		String result = hl7service.getUuidFromIdentifiers(identifiers);
 		assertEquals("2178037d-f86b-4f12-8d8b-be3ebc220022", result);
 	}
@@ -626,7 +626,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		CX[] identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		CX[] identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		assertThrows(HL7Exception.class, () -> hl7service.getUuidFromIdentifiers(identifiers));
 	}
 	
@@ -648,7 +648,7 @@ public class HL7ServiceTest extends BaseContextSensitiveTest {
 		                + "OBX|2|DT|5096^RETURN VISIT DATE^99DCT||20080229|||||||||20080212");
 		ORU_R01 oru = (ORU_R01) message;
 		List<NK1> nk1List = new ORUR01Handler().getNK1List(oru);
-		CX[] identifiers = nk1List.get(0).getNextOfKinAssociatedPartySIdentifiers();
+		CX[] identifiers = nk1List.getFirst().getNextOfKinAssociatedPartySIdentifiers();
 		hl7service.getUuidFromIdentifiers(identifiers);
 	}
 	
